# behavioral-model

./: .bazelrc  .bazelversion.license  .dockerignore  .gitignore  .travis.yml  BUILD  BUILD.bazel  CMAKE_IMPLEMENTATION_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  Dockerfile.grpc  Dockerfile.noPI  Doxyfile.license  Doxymain.md  MODULE.bazel  Makefile.am  PR_DESCRIPTION.md  README.cmake.md  README.md  SPANISHREADME.md  WORKSPACE.bzlmod  autogen.sh  bm.lsm  bmv2-libthrift.pc.in  build-deb  cleanup.ps1  cmake_install.cmake  configure.ac  install_deps.sh  install_deps_ubuntu_22.04.sh  install_manifest.txt  packaging.conf  pkgconfig_grpc.bzl  renew-debian-changelog  simple_test.cpp  (+3 more)
PI/: BUILD.bazel  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  cmake_install.cmake  pi_system_libs.BUILD
PI/src/: action_helpers.cpp  action_helpers.h  common.cpp  common.h  device_state.cpp  device_state.h  direct_res_spec.cpp  direct_res_spec.h  group_selection.cpp  group_selection.h  pi.cpp  pi_act_prof_imp.cpp  pi_clone_imp.cpp  pi_counter_imp.cpp  pi_imp.cpp  pi_learn_imp.cpp  pi_mc_imp.cpp  pi_meter_imp.cpp  pi_tables_imp.cpp
include/: BUILD.bazel  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  cmake_install.cmake
include/bf_lpm_trie/: bf_lpm_trie.h
include/bm/: config.h  config.h.in
pdfixed/: CMakeLists.txt  Makefile.am
pdfixed/include/: Makefile.am
pdfixed/src/: pd_helpers.cpp  pd_mirroring.cpp  pd_notifications.cpp  pd_pre.cpp  pd_static.cpp  pd_swap.cpp
pdfixed/thrift/: conn_mgr_pd_rpc.thrift  mc_pd_rpc.thrift  res.thrift  sswitch_pd_rpc.thrift
pdfixed/thrift-src/: conn_mgr_pd_rpc_server.ipp  mc_pd_rpc_server.ipp  pdfixed_rpc_server.cpp  pdfixed_rpc_server.h  sswitch_pd_rpc_server.ipp
proto/: BUILD.bazel  CMakeLists.txt  Makefile.am  packet_trace.proto
services/: .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  CPPLINT.cfg  CTestTestfile.cmake  Makefile.am  cmake_install.cmake
services/switch_runner/: switch_runner.cpp  switch_runner.h
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile.am  cmake_install.cmake
src/BMI/: BUILD.bazel  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  bmi_interface.c  bmi_interface.cpp  bmi_interface.h  bmi_port.c  cmake_install.cmake
src/bf_lpm_trie/: CMakeLists.txt  Makefile.am  bf_lpm_trie.c  bf_lpm_trie.cpp  bf_lpm_trie_modified.cpp
src/bm_apps/: CMakeLists.txt  CPPLINT.cfg  CTestTestfile.cmake  Makefile.am  cmake_install.cmake  learn.cpp  nn.h.license  notifications.cpp  packet_pipe.cpp
src/bm_runtime/: CMakeLists.txt  CTestTestfile.cmake  Makefile.am  SimplePreLAG_server.cpp  SimplePre_server.cpp  Standard_server.cpp  Standard_server_nic.cpp  cmake_install.cmake  server.cpp
src/bm_sim/: .gitignore  BUILD.bazel  CMakeLists.txt  CPPLINT.cfg  CTestTestfile.cmake  Makefile.am  P4Objects.cpp  _assert.cpp  action_profile.cpp  actions.cpp  ageing.cpp  bytecontainer.cpp  calculations.cpp  checksums.cpp  cmake_install.cmake  conditionals.cpp  context.cpp  control_action.cpp  counters.cpp  crc_map.cpp  crc_map.h  crc_tables.h  debugger.cpp  deparser.cpp  dev_mgr.cpp  dev_mgr_bmi.cpp  dev_mgr_packet_in.cpp  enums.cpp  event_logger.cpp  expressions.cpp  extern.cpp  extract.h  fanout_pkt_mgr.cpp  fanout_pkt_vec.cpp  fields.cpp  header_unions.cpp  headers.cpp  learning.cpp  logger.cpp  lookup_structures.cpp  (+36 more)
src/output_all_pkts/: README.md  a.txt
targets/: CMakeCache.txt  CMakeLists.txt  CPPLINT.cfg  CTestTestfile.cmake  Makefile.am  README.md  cmake_install.cmake  test_utils.cpp  test_utils.h
targets/l2_switch/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  cmake_install.cmake  l2_switch.cpp  l2_switch.p4  primitives.cpp  run.sh
targets/pna_nic/: .gitignore  CMakeLists.txt  CPPLINT.cfg  CTestTestfile.cmake  Makefile.am  accelerators.cpp  accelerators.h  cmake_install.cmake  main.cpp  pna_nic.cpp  pna_nic.h  pna_nic_CLI.in  pnic_CLI  pnic_CLI.py  primitives.cpp
targets/portable_switch/: .gitignore  Makefile.am  main.cpp  portable_switch.cpp  portable_switch.h  primitives.cpp  pswitch_CLI.py
targets/psa_switch/: .gitignore  CMakeLists.txt  CPPLINT.cfg  CTestTestfile.cmake  Makefile.am  cmake_install.cmake  main.cpp  primitives.cpp  psa_counter.h  psa_switch.cpp  psa_switch.h  psa_switch_CLI.in  pswitch_CLI  pswitch_CLI.py
targets/psa_switch_grpc/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  README.md  cmake_install.cmake  config.h.in  configure.ac  gWZNRzKKk4  gnmi_sub_on_change.py  gnmi_sub_once.py  main.cpp  simple_switch_grpc  switch_runner.cpp  switch_runner.h  switch_sysrepo.cpp  switch_sysrepo.h
targets/simple_router/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  cmake_install.cmake  primitives.cpp  run.sh  (+3 more)
tests/: .gitignore  CMakeLists.txt  CPPLINT.cfg  CTestTestfile.cmake  Makefile.am  bmi_stubs.c  cmake_install.cmake  main.cpp  primitives.cpp  test_actions.cpp  test_ageing.cpp  test_assert_assume.cpp  test_bm_apps.cpp  test_calculations.cpp  test_checksums.cpp  test_conditionals.cpp  test_control_flow.cpp  test_core_primitives.cpp  test_counters.cpp  test_data.cpp  test_devmgr.cpp  test_enums.cpp  test_expressions.cpp  test_extern.cpp  test_fields.cpp  test_handle_mgr.cpp  test_header_stacks.cpp  test_header_unions.cpp  test_headers.cpp  test_learning.cpp  test_log_msg.cpp  test_log_msg_header.cpp  test_logging.cpp  test_meters.cpp  test_p4objects.cpp  test_packet.cpp  test_parser.cpp  test_pcap.cpp  test_periodic_tasks.cpp  test_phv.cpp  (+14 more)
thrift_src/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  cmake_install.cmake  simple_pre.thrift  simple_pre_lag.thrift  standard.thrift
tools/: .gitignore  .runtime_CLI.py@neomake_30090_2.py  CMakeLists.txt  CTestTestfile.cmake  Makefile.am  bm_CLI.in  bm_nanomsg_events.in  bm_p4dbg.in  bmpy_utils.py  check_style.sh  cmake_install.cmake  cpplint.py  get_version.sh  install-uv.sh  nanomsg_client.py  p4dbg.py  run_valgrind.sh  runtime_CLI.py  selector_path_permutation_tests.py  veth_setup.sh  veth_teardown.sh
(+470 files in other folders)
