module(
    name = "behavioral-model",
    version = "1.15.0",
    bazel_compatibility = [">=7.2.1"],
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.17")

bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)

ubuntu2204 = use_extension("//bazel:ubuntu2204.bzl", "ubuntu2204")
use_repo(ubuntu2204, "ubuntu2204")
