# SPDX-FileCopyrightText: 2026 Yuao Ma
#
# SPDX-License-Identifier: Apache-2.0

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "dataplane_interface_proto",
    srcs = ["p4/bm/dataplane_interface.proto"],
    strip_import_prefix = "",
)

cc_proto_library(
    name = "dataplane_interface_cc_proto",
    deps = [":dataplane_interface_proto"],
)

cc_grpc_library(
    name = "bm_grpc_dataplane",
    srcs = [":dataplane_interface_proto"],
    grpc_only = True,
    deps = [":dataplane_interface_cc_proto"],
)
